# AeroNavigator

./: .flake8  README.md  conftest.py  main.py  pyproject.toml
api/: __init__.py  aeroplanes_api.py  base_api.py
data/: flights.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_10fae538ba4e8521___init___py.html  z_10fae538ba4e8521_aeroplanes_api_py.html  z_78361d3913668f02___init___py.html  z_78361d3913668f02_json_storage_py.html  z_c810615cce0f7acb___init___py.html  z_c810615cce0f7acb_helpers_py.html  z_c810615cce0f7acb_logger_config_py.html  z_e634d7a1dd90e049___init___py.html  z_e634d7a1dd90e049_aeroplane_py.html
models/: __init__.py  aeroplane.py
storage/: __init__.py  base_storage.py  csv_storage.py  json_storage.py
tests/api/: test_aeroplanes_api.py
tests/models/: test_aeroplane.py
tests/storage/: test_csv_storage.py  test_json_storage.py
tests/utils/: test_helpers.py
utils/: __init__.py  helpers.py  logger_config.py
utils/tests/storage/: test_json_storage.py
